Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117746

eglfs: Capturing the screen crashes

XMLWordPrintable

    • Linux/Yocto
    • e5d614f59 (dev), cc4dd8776 (6.7), 807c4e10a (6.6), 13d7ed987 (tqtc/lts-6.5), 0fd782d27 (dev), afb03fdf7 (6.7), 84d4af889 (6.6), cca9a125e (tqtc/lts-6.5)
    • G&UI Finishing 2023

      Trying to capture the screen results in a crash. It is enough just to start the example application.

      qt.multimedia.plugin: Available backends QList("ffmpeg", "gstreamer")
      qt.multimedia.plugin: loading backend "ffmpeg"
      qt.multimedia.ffmpeg.mediaformatinfo: >>>> listing codecs
      qt.multimedia.ffmpeg.utils: Skip experimental codec avui
      qt.multimedia.ffmpeg.utils: Skip experimental codec s302m
      qt.multimedia.ffmpeg.utils: Skip experimental codec dca
      qt.multimedia.ffmpeg.utils: Skip experimental codec mlp
      qt.multimedia.ffmpeg.utils: Skip experimental codec opus
      qt.multimedia.ffmpeg.utils: Skip experimental codec sonic
      qt.multimedia.ffmpeg.utils: Skip experimental codec sonicls
      qt.multimedia.ffmpeg.utils: Skip experimental codec truehd
      qt.multimedia.ffmpeg.utils: Skip experimental codec vorbis
      qt.multimedia.ffmpeg.utils: Skip experimental codec sonic
      qt.multimedia.ffmpeg.v4l2camera: Format_UYVY
      qt.multimedia.ffmpeg.v4l2camera: Format_YUYV
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_UYVY
      qt.multimedia.ffmpeg.v4l2camera: Format_YUV420P
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_XBGR8888
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_NV12
      qt.multimedia.ffmpeg.v4l2camera: Format_NV21
      qt.multimedia.ffmpeg.v4l2camera: Format_YUYV
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_UYVY
      qt.multimedia.ffmpeg.v4l2camera: Format_YUV420P
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_NV12
      qt.multimedia.ffmpeg.v4l2camera: Format_NV21
      qt.multimedia.ffmpeg.v4l2camera: Format_YUYV
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_UYVY
      qt.multimedia.ffmpeg.v4l2camera: Format_YUV420P
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_XBGR8888
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_NV12
      qt.multimedia.ffmpeg.v4l2camera: Format_NV21
      qt.multimedia.ffmpeg.v4l2camera: Format_YUYV
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_UYVY
      qt.multimedia.ffmpeg.v4l2camera: Format_YUV420P
      qt.multimedia.ffmpeg.v4l2camera: Format_Invalid
      qt.multimedia.ffmpeg.v4l2camera: Format_NV12
      qt.multimedia.ffmpeg.v4l2camera: Format_NV21
      qt.multimedia.ffmpeg.v4l2camera: FD= 22
      qt.multimedia.imageCapture: cameraActiveChanged false false
      qt.multimedia.ffmpeg.mediacapturesession: set audio input: "null"
      qt.multimedia.ffmpeg.mediacapturesession: set audio input: ""
      qt.multimedia.ffmpeg.screencapturethread: Screen capture rate has been changed: 60
      qt.multimedia.ffmpeg.screencapturethread: start screen capture thread
      quit
      Application crashed: /usr/bin/appRecorder
      Process stopped
      

        1. qtbug117746.tar.gz
          9 kB
          Joni Poikelin
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mikko.hallamaa Mikko Hallamaa
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: