Use composition to run screen capture on main thread if needed

EGLFS screen capture on embedded Linux platform crashes because of
calling QScreen::grabWindow on a separate thread. Need to refactor
FFmpeg surface capture to allow choosing whether to run on a separate
thread or not.

Task-number: QTBUG-117746
Task-number: QTBUG-117878
Change-Id: I30629a3806220f02ca2cc3dc8c2749bd337914de
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit e5d614f599a25e9a7280d16f6a6fe18f73120c56)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit cc4dd87764b4c9bd897138f891f42063cc218a75)
(cherry picked from commit 807c4e10a3f7eb5eedcffdf025cacd6d85130343)