src/plugins/multimedia/ffmpeg/qgrabwindowsurfacecapture.cpp
@@ -91,7 +91,7 @@ public:
 
 private:
     Grabber(QGrabWindowSurfaceCapture &capture, QScreen *screen, WindowUPtr window)
-        : m_capture(capture), m_screen(screen), m_window(std::move(window))
+        : QFFmpegSurfaceCaptureThread(QGuiApplication::platformName() != QLatin1String("eglfs")), m_capture(capture), m_screen(screen), m_window(std::move(window))
     {
         connect(qApp, &QGuiApplication::screenRemoved, this, &Grabber::onScreenRemoved);
         addFrameCallback(m_capture, &QGrabWindowSurfaceCapture::newVideoFrame);
